Fix responsive issues in all views (#131)
* fix responsive in header
 - show lightning yak in one line
 - truncate lightning yak text with elipsis for a specific max-width

* remove text truncate with hamburger menu

* fix responsive issue for index page

* fix responsive issues in services page
- fix position and size of side images
- fix background image size in cards way-work

* fix navbar distribution in blog post pages

* fix issues in responsive for post pages
- change opacity of side images when overlap with the text

* fix issue with toc popup
- the content inside the popup was not being displayed
- add missing href in popup toc
- add href to Go-to-comments anchor
- add href to Go-to-top anchor

* fix margins in brand and remove commented line

* center the first section when max screen width 768px

* update styles for work with us section

* set width to 8 columns after large 

* update font family to subtext-size-2

* fix typo "satified"

* hide hambuguer in comments and test with smoothHashScroll

* fix error with smoothscroll for hashes with numbers

- filter hashes with number
- Convert first number to unicode

* fix variable declaration type

--- a/static/core/css/base.css
+++ b/static/core/css/base.css
@@ -22,6 +22,10 @@ header .collapse {
 header .navbar {
     border-bottom: 1px solid #2b2b2b;
     padding-bottom: 12px;
+    padding-top: 8px;
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-bottom: 0;
 }
 
 header .container .nav-item .nav-link {
@@ -288,6 +292,41 @@ a:hover{
     align-items: center;
 }
 
+header .container::before {
+    display: none;
+    content: "";
+}
+
+header .container::after {
+    display: none;
+    content: "";
+} 
+
+header .navbar::before{
+    display: none;
+    content: "";
+}
+
+header .navbar::after{
+    display: none;
+    content: "";
+}
+
+header .navbar-toggler-icon {
+    width: 30px;
+    height: 30px;
+}
+
+#monadical-brand {
+    display: inline-block;
+    padding: 0.3125rem 0 0.3125rem 0;
+    margin-right: 1rem;
+    font-size: 1.25rem;
+    height: auto;
+    line-height: inherit;
+    white-space: nowrap;
+}
+
 .button-navbar {
     min-width: 300px;
     max-width: 300px;
@@ -303,12 +342,19 @@ a:hover{
         flex-direction: column;
         align-items: flex-start;
     }
-
+    
     .button-navbar {
         max-width: 100%;
-        margin: 10px 20px;
+        margin: 10px 20px 10px 0;
     }
 }
+
+@media (min-width: 576px) and (max-width: 600px){
+    header .container .nav-item:last-child {
+        max-width: calc(121px*0.8);
+    }
+}
+
 
 /* End Navbar */
 
@@ -852,6 +898,7 @@ div.card-reference div.card-body {
     width: 100%;
     min-height: 250px;
     padding: 20px;
+    background-size: cover;
 }
 
 .card-second-way-work {
@@ -859,6 +906,7 @@ div.card-reference div.card-body {
     width: 100%;
     min-height: 250px;
     padding: 20px;
+    background-size: cover;
 }
 
 .card-blue-title {
@@ -1382,7 +1430,9 @@ button.read-more {
     .blog-card .blog-img {
         height: 240px;
     }
+}
 
+@media screen and (max-width: 768px){
     .first-section {
         text-align: center;
     }
